@@ -4954,5 +4954,32 @@ public class TestIndexWriter extends LuceneTestCase {
     writer.close();
     assertEquals("expected a no-op close after IW.rollback()", 0, dir.listAll().length);
   }
-  
+
+  public void testNoSegmentFile() throws IOException {
+    File tempDir = _TestUtil.getTempDir("noSegmentFile");
+    try {
+      Directory dir = FSDirectory.open(tempDir);
+      dir.setLockFactory(new NoLockFactory());
+      IndexWriter w = new IndexWriter(dir, new IndexWriterConfig(
+                                                                 TEST_VERSION_CURRENT, new MockAnalyzer())
+                                      .setMaxBufferedDocs(2));
+
+      Document doc = new Document();
+      doc.add(new Field("c", "val", Store.YES, Index.ANALYZED, TermVector.WITH_POSITIONS_OFFSETS));
+      w.addDocument(doc);
+      w.addDocument(doc);
+      String[] files = dir.listAll();
+      for(String file : files) {
+        System.out.println("file=" + file);
+      }
+      IndexWriter w2 = new IndexWriter(dir, new IndexWriterConfig(
+                                                                  TEST_VERSION_CURRENT, new MockAnalyzer())
+                                       .setMaxBufferedDocs(2).setOpenMode(OpenMode.CREATE));
+
+      w2.close();
+      dir.close();
+    } finally {
+      _TestUtil.rmDir(tempDir);
+    }
+  }
 }
